--- a/filebrowser/main.ui
+++ b/filebrowser/main.ui
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>80</y>
+      <x>690</x>
+      <y>40</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -30,14 +30,27 @@
    <widget class="QPushButton" name="pushButton1">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>220</y>
+      <x>660</x>
+      <y>280</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="imageLabel1">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>611</width>
+      <height>501</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
