image alignment adjusted

--- a/filebrowser/main.ui
+++ b/filebrowser/main.ui
@@ -42,6 +42,9 @@
           <property name="scaledContents">
            <bool>false</bool>
           </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
          </widget>
         </item>
        </layout>
